[metadata]
name = solum-tempest-plugin
summary = Tempest plugin for the solum project.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/solum/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    solum_tempest_plugin

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = solum_tempest_plugin/locale
domain = solum_tempest_plugin

[update_catalog]
domain = solum_tempest_plugin
output_dir = solum_tempest_plugin/locale
input_file = solum_tempest_plugin/locale/solum_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = solum_tempest_plugin/locale/solum_tempest_plugin.pot

[entry_points]
tempest.test_plugins =
    solum_tests = solum_tempest_plugin.plugin:SolumTempestPlugin
