[metadata]
name = solum-tempest-plugin
summary = Tempest plugin for the solum project.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/solum/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    solum_tempest_plugin

[compile_catalog]
directory = solum_tempest_plugin/locale
domain = solum_tempest_plugin

[update_catalog]
domain = solum_tempest_plugin
output_dir = solum_tempest_plugin/locale
input_file = solum_tempest_plugin/locale/solum_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = solum_tempest_plugin/locale/solum_tempest_plugin.pot

[entry_points]
tempest.test_plugins =
    solum_tests = solum_tempest_plugin.plugin:SolumTempestPlugin
